--- a/panel.css
+++ b/panel.css
@@ -33,8 +33,10 @@ th{
 
 .control h1, h3, button, div, input{
     padding-left: 1%;
+    padding-right: 1%;
     margin-top: 2%;
     margin-bottom: 3%;
+    width: 100%;
 }
 
 .control .panel{
@@ -42,4 +44,28 @@ th{
     width: 30%;
     margin-top: 2%;
     margin-bottom: 3%;
+}
+
+.control button{
+    color: white;
+    height: 80;
+}
+
+#btn_entrance{
+    background-color: rgb(111, 204, 111);
+}
+
+#btn_exit{
+    background-color: rgb(223, 103, 103);
+}
+
+#btn_erase_data{
+    background-color: rgb(240, 185, 84);
+}
+
+.checkboxes{
+    width: 5%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
