--- a/panel.css
+++ b/panel.css
@@ -1,17 +1,14 @@
 body{
     background-image: url("/images/background-clean.png");
-    height: 100%;
     background-size:  cover;
 }
 
+
 table{
-    position: relative;
-    margin-left: 40%;
-    background-color: rgba(252, 243, 243, 0.2);
-    width: 50%;
-    height: 80%;
-    border-radius: 5%;
-    margin-top: 2%;
+    background-color: rgba(221, 200, 200, 0.2);
+    width: 60%;
+    text-align: center;
+    margin-left: 10%;
 }
 
 thead{
@@ -19,36 +16,34 @@ thead{
     color: aliceblue;
 }
 
-th{
-    padding-top: 1%;
-}
-
 .control{
     float: left;
     width: 20%;
     background-color: rgba(231, 227, 218, 0.904);
     border-radius: 5%;
-    margin-top: 2%;
+    
+    padding-bottom: 1%;
+    padding-inline-start: 1%;
+    padding-inline-end: 1%;
 }
 
-.control h1, h3, button, div, input{
-    padding-left: 1%;
-    padding-right: 1%;
-    margin-top: 2%;
-    margin-bottom: 3%;
+
+.control button, input {
     width: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 
-.control .panel{
+.control .panel h4{
     background-color: rgba(105, 99, 99, 0.336);
-    width: 30%;
-    margin-top: 2%;
-    margin-bottom: 3%;
+    height: 8rem;
 }
 
 .control button{
     color: white;
     height: 80;
+    text-align: center;
+    margin-top: 6%;
 }
 
 #btn_entrance{
@@ -64,8 +59,27 @@ th{
 }
 
 .checkboxes{
-    width: 5%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin-top: 1%;
+    width: 10%;
 }
+
+.column {
+    float: left;
+    margin-top: 1%;
+}
+  
+.left {
+   width: 30%;
+}
+  
+.right {
+   width: 60%;
+}
+  
+  /* Clear floats after the columns */
+  /*.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }*/
+  
