--- a/pagamento/metodo_pagamento.css
+++ b/pagamento/metodo_pagamento.css
@@ -8,4 +8,61 @@ body {
     padding-top: 50px;
     text-align: center;
     color: #fefeff;
+    margin-bottom: 50px;
+    letter-spacing: 3px;
+
   }
+
+  .valor {
+    background-color: #fefffe;
+    text-align: center;
+    padding: 25px 0 25px 0;
+    margin: auto;
+    width: 230px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 40px;
+    box-shadow: 10px 5px 5px rgb(41, 40, 40);
+
+    /*Deixar borda circular*/
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px; 
+    border-radius: 10px;
+    /*---------------------*/
+  }
+
+
+
+/* Area do grid layout*/
+.wrapper {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+  justify-items: center; 
+    width: 50%;
+    margin: auto;
+
+}
+
+/* Caixas de cada metodo */
+.wrapper > div{
+    color: white;
+    font-weight: bold;
+    font-style: oblique;  
+    font-size: 20px;
+    text-align: center;
+    background-color: #992120;
+    padding: 25px 0 25px 0;
+    margin: 30px;
+    width: 230px;
+    box-shadow: 10px 5px 5px rgb(41, 40, 40);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+.wrapper > div:hover {
+    background-color: #ce0808;
+    cursor: pointer;
+}
+
