--- a/pagamento/pagamento_realizado.css
+++ b/pagamento/pagamento_realizado.css
@@ -9,3 +9,11 @@ body {
     text-align: center;
     color: #fefeff;
   }
+#imgpos {
+    position: absolute;
+    margin: auto;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
