--- a/pagamento/metodo_pagamento.css
+++ b/pagamento/metodo_pagamento.css
@@ -1,15 +1,15 @@
 body {
     background-image: url("../images/hexa.png");   /*Background teste enquanto não acham a outra :p */
-    height: 100%;
-    background-size:  cover;
+    background-size: 100% 130%;
 }
 
 .header_logo {
     padding-top: 50px;
+    font-size: 20px;
     text-align: center;
     color: #fefeff;
     margin-bottom: 50px;
-    letter-spacing: 3px;
+    letter-spacing: 1.5px;
 
   }
 
@@ -25,8 +25,6 @@ body {
     box-shadow: 10px 5px 5px rgb(41, 40, 40);
 
     /*Deixar borda circular*/
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px; 
     border-radius: 10px;
     /*---------------------*/
   }
@@ -55,9 +53,6 @@ body {
     padding: 25px 0 25px 0;
     margin: 30px;
     width: 230px;
-    box-shadow: 10px 5px 5px rgb(41, 40, 40);
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
     border-radius: 10px;
 }
 
