--- a/pagamento/metodo_pagamento.css
+++ b/pagamento/metodo_pagamento.css
@@ -1,15 +1,31 @@
+@font-face {
+  font-family: 'fe-font';
+  src: url('../Fonts/fe-font-webfont.woff2') format('woff2'),
+       url('../Fonts/fe-font-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 body {
     background-image: url("../images/hexa.png");   /*Background teste enquanto não acham a outra :p */
     background-size: 100% 130%;
+
+}
+
+.header_title {
+  text-shadow: 1px 2px 2px black;
+    font-size: 50px;
 }
 
 .header_logo {
     padding-top: 50px;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     color: #fefeff;
     margin-bottom: 50px;
     letter-spacing: 1.5px;
+    font-family: 'fe-font';
 
   }
 
@@ -44,7 +60,7 @@ body {
 
 /* Caixas de cada metodo */
 .wrapper > div{
-    color: white;
+    color: rgb(223, 209, 209);
     font-weight: bold;
     font-style: oblique;  
     font-size: 20px;
