Metodo Pix added

--- a/pagamento/metodo_pagamento.css
+++ b/pagamento/metodo_pagamento.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url("../images/hexa.png");   /*Background teste enquanto não acham a outra :p */
+    background-image: url("../images/hexa.png"); 
     background-size: 100% 130%;
 
 }
