--- a/pagamento/metodo_pagamento.css
+++ b/pagamento/metodo_pagamento.css
@@ -1,31 +1,37 @@
 @font-face {
+  font-family: 'mandatory';
+  src: url('../Fonts/mandator-webfont.woff') format('woff2'),
+       url('../Fonts/mandator-webfont.woff2') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'fe-font';
   src: url('../Fonts/fe-font-webfont.woff2') format('woff2'),
        url('../Fonts/fe-font-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-
 }
 
 body {
     background-image: url("../images/hexa.png"); 
     background-size: 100% 130%;
-
 }
 
 .header_title {
   text-shadow: 1px 2px 2px black;
-    font-size: 50px;
+  font-size: 45px;
 }
 
 .header_logo {
     padding-top: 50px;
-    font-size: 15px;
+    font-size: 18px;
     text-align: center;
     color: #fefeff;
     margin-bottom: 50px;
     letter-spacing: 1.5px;
-    font-family: 'fe-font';
+    font-family: 'Kanit', sans-serif;
 
   }
 
@@ -60,11 +66,12 @@ body {
 
 /* Caixas de cada metodo */
 .wrapper > div{
-    color: rgb(223, 209, 209);
+    color: rgb(255, 255, 255);
     font-weight: bold;
-    font-style: oblique;  
-    font-size: 20px;
+    font-style: o;  
+    font-size: 23px;
     text-align: center;
+    text-shadow: 1px 1px 0px black;
     background-color: #992120;
     padding: 25px 0 25px 0;
     margin: 30px;
@@ -76,4 +83,3 @@ body {
     background-color: #ce0808;
     cursor: pointer;
 }
-
