--- a/pagamento/pagamento_realizado.css
+++ b/pagamento/pagamento_realizado.css
@@ -1,20 +1,44 @@
-body {
-    background-image: url("../images/hexa.png");
-    height: 100%;
-    background-size:  cover;
+@font-face {
+    font-family: 'mandatory';
+    src: url('../Fonts/mandator-webfont.woff') format('woff2'),
+         url('../Fonts/mandator-webfont.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
+@font-face {
+    font-family: 'fe-font';
+    src: url('../Fonts/fe-font-webfont.woff2') format('woff2'),
+         url('../Fonts/fe-font-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    background-image: url("../images/hexa.png");
+    background-size:  cover;
+    font-weight: bolder;
+}
+.txt{
+    margin-top: -18%;
+}
+
+.header_title {
+    text-shadow: 1px 3px 2px black;
+    font-size: 50px;
+}
 .header_logo {
     padding-top: 50px;
+    
     text-align: center;
     color: #fefeff;
-  }
 
-#imgpos {
-    position: absolute;
-    margin: auto;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
+    font-family: 'Kanit', sans-serif;
+    font-size: 18px;
+    line-height: 28px;
+    color: #ffffff;
+}
+
+#imgpos{
+    margin-left: 45%;
 }
