--- a/panel.css
+++ b/panel.css
@@ -128,3 +128,12 @@ aside > div {
   .tester {
       border: 1px solid red;
   }
+ 
+#btnCalcularSalario{
+    margin-top: 1%;
+    margin-left: 35%;
+    background-color: rgb(111, 204, 111);
+    border-radius: 4px;
+    border-radius: 10px;
+    font-size: 20px;
+}
