--- a/panel.css
+++ b/panel.css
@@ -136,6 +136,11 @@ aside > div {
   .tester {
       border: 1px solid red;
   }
+
+#parking_spots{
+    margin-top: 1%;
+    margin-left: 26%;
+}
  
 #btnCalcularSalario{
     margin-top: 1%;
@@ -144,4 +149,11 @@ aside > div {
     border-radius: 4px;
     border-radius: 10px;
     font-size: 20px;
+}
+
+#btn-calcular-spots{
+    background-color: rgb(255, 255, 255);
+    border-radius: 4px;
+    border-radius: 10px;
+    font-size: 18px;
 }
