--- a/pagamento/metodos/dinheiro.css
+++ b/pagamento/metodos/dinheiro.css
@@ -40,6 +40,7 @@
     margin-top: 10%;
     width: 25%;
     border-radius: 10px;
+    margin-left: 37.5%;
 }
 .pay:hover{
     background-color: #0b4e16;
